--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
   "main": "server/index.js",
   "scripts": {
     "start": "node server/index.js",
-    "build": "webpack --config ./client/webpack.config.js",
-    "dev": "nodemon --watch server/index.js & yarn build --watch",
+    "build-dev": "webpack --progress --config ./client/config/webpack.dev.js --mode development",
+    "build-prod": "webpack -p --progress --config ./client/config/webpack.prod.js --mode production",
+    "dev": "nodemon --watch server/index.js & yarn build-dev --watch",
+    "prod": "nodemon --watch server/index.js & yarn build-prod --watch",
     "test": "jest --watch --noStackTrace",
-    "postinstall": "webpack --config ./client/webpack.config.js"
+    "postinstall": "webpack -p --progress --config ./client/config/webpack.prod.js --mode production"
   },
   "repository": {
     "type": "git",
@@ -58,15 +60,11 @@
     "style-loader": "^0.20.2",
     "superagent": "^3.8.2",
     "three": "0.86.0",
-    "webpack": "^3.10.0"
+    "webpack": "^4.20.2",
+    "webpack-merge": "^4.1.4"
   },
   "devDependencies": {
-    "enzyme": "^3.3.0",
-    "enzyme-adapter-react-16": "^1.1.1",
-    "jest": "^22.3.0",
     "nodemon": "^1.14.12",
-    "react-addons-test-utils": "^15.6.2",
-    "webpack-dev-server": "^2.11.1",
-    "webpack-livereload-plugin": "^1.0.0"
+    "webpack-cli": "^3.1.2"
   }
 }
